# windows-audio-volume-scheduler

./: .gitignore  CMakeLists.txt  README.md  VolumeControl.sln  package.json
.github/workflows/: build.yml  codeql-analysis.yml
lib/: Exports.def  VolumeControl.cpp  VolumeControl.vcxproj
src/: app.js  install-service.js  settings.json  uninstall-service.js  volume-control.js
test/: Test.cpp  Test.vcxproj
